[gd_scene load_steps=4 format=3 uid="uid://btsfrbk6u5b01"]

[ext_resource type="PackedScene" uid="uid://dekytxtckmxxm" path="res://scenes/tarsier.tscn" id="1_lssaw"]
[ext_resource type="Script" path="res://scenes/home.gd" id="1_luc4e"]
[ext_resource type="PackedScene" uid="uid://bq8sxetw7t5tv" path="res://scenes/eagle.tscn" id="3_w3u70"]

[node name="Home" type="Node2D"]
script = ExtResource("1_luc4e")

[node name="Tarsier" parent="." instance=ExtResource("1_lssaw")]
position = Vector2(117, 405)

[node name="hungerLbl" type="Label" parent="."]
offset_left = 47.0
offset_top = 234.0
offset_right = 127.0
offset_bottom = 289.0

[node name="hungerLbl2" type="Label" parent="."]
offset_left = 298.0
offset_top = 221.0
offset_right = 378.0
offset_bottom = 276.0

[node name="Button" type="Button" parent="."]
offset_left = 62.0
offset_top = 517.0
offset_right = 162.0
offset_bottom = 576.0
text = "feed"

[node name="Button2" type="Button" parent="."]
offset_left = 254.0
offset_top = 514.0
offset_right = 354.0
offset_bottom = 573.0
text = "feed"

[node name="Eagle" parent="." instance=ExtResource("3_w3u70")]
position = Vector2(307, 402)

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Button2" to="." method="_on_button_2_button_up"]
